# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page_analyzer.yml
page_analyzer/: app.py  db.py  html_parser.py  http_requests.py  sql.py  url_utils.py  validation.py
page_analyzer/templates/: 404.html  500.html  index.html  layout.html  url_details.html  urls.html
tests/: conftest.py  test_db.py  test_html_parser.py  test_index.py  test_page_analyzer.py  test_url_check.py  test_url_details.py  test_urls.py
tests/fixtures/html_parser/: full.html  no_description.html  no_h1.html  no_title.html
